--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="main_text_color">#1D50D7</color>
     <color name="blue">#0c7fc4</color>
     <color name="green">#00FFFF</color>
+    <color name="title_color">#30AB8F</color>
 </resources>
