--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="50dp"/>
-        <gradient android:startColor="@color/green" android:endColor="#070E26" android:angle="90"/>
+        <gradient android:startColor="#3BFCA4" android:endColor="#00FA88" android:angle="90"/>
     </shape>
 </item>
 </selector>
