--- a/app/src/main/res/drawable/fragment_background.xml
+++ b/app/src/main/res/drawable/fragment_background.xml
@@ -2,8 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="50dp"/>
-            <gradient android:startColor="@color/green" android:endColor="#30AB5B" android:angle="90"/>
+            <gradient android:startColor="#BDF7EA" android:endColor="#ABF5E5" android:angle="270"/>
         </shape>
     </item>
 </selector>
