--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -45,36 +45,55 @@
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
         <ImageView
             android:id="@+id/likeImageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:src="@drawable/unliked"
+            android:onClick="likePost"
             android:layout_marginRight="16dp"
-            android:src="@drawable/hearth" />
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/likeNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="20"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_alignBottom="@id/likeImageView"
+            android:layout_alignEnd="@id/likeImageView"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="4dp" />
+
 
         <ImageView
             android:id="@+id/commentImageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginEnd="150dp"
-            android:src="@drawable/comment" />
+            android:layout_marginStart="145dp"
+            android:layout_toEndOf="@id/likeImageView"
+            android:src="@drawable/comment"/>
 
         <ImageView
             android:id="@+id/shareImageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginStart="129dp"
             android:layout_marginEnd="10dp"
+            android:layout_toEndOf="@id/commentImageView"
+            android:onClick="sharePost"
             android:src="@drawable/share2" />
 
-    </LinearLayout>
+    </RelativeLayout>
+
 
 </LinearLayout>
 
