--- a/app/src/main/res/layout/activity_pharmacies.xml
+++ b/app/src/main/res/layout/activity_pharmacies.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.PharmaciesActivity">
+    tools:context=".view.PharmaciesActivity"
+    android:background="@drawable/fragment_background">
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="433dp"
+        android:layout_height="324dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp" />
 
@@ -25,20 +26,21 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/PharmaciesRecyclerView"
         android:layout_width="401dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="500dp" />
+        android:layout_height="320dp"
+        android:layout_below="@+id/btnFetchPharmacies"
+        android:layout_marginTop="8dp" />
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
         android:layout_width="401dp"
         android:layout_height="61dp"
-        android:layout_below="@+id/recyclerView"
+        android:layout_below="@+id/PharmaciesRecyclerView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/bottom_background"
         app:cnb_backgroundColor="@color/blue"
