--- a/app/src/main/res/layout/activity_post_upload.xml
+++ b/app/src/main/res/layout/activity_post_upload.xml
@@ -21,38 +21,50 @@
 
     <EditText
         android:id="@+id/commentText"
-        android:layout_width="245dp"
-        android:layout_height="67dp"
+        android:layout_width="288dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Type Comment"
         android:inputType="text"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="5"
-        android:rating="0"
-        android:stepSize="1.0"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/commentText"
-        app:layout_constraintStart_toStartOf="@+id/commentText"
-        app:layout_constraintEnd_toEndOf="@+id/commentText"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/UploadBtn"
+        android:layout_width="118dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="96dp"
+        android:onClick="upload"
+        android:text="POST"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+
+    <Button
+        android:id="@+id/cameraBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="POST"
-        android:onClick="upload"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:onClick="takePhoto"
+        android:text="Take Photo"
+        app:layout_constraintBottom_toTopOf="@+id/UploadBtn"
+        app:layout_constraintEnd_toEndOf="@+id/commentText"
+        app:layout_constraintTop_toBottomOf="@+id/commentText"
+        app:layout_constraintVertical_bias="0.479" />
+
+    <Button
+        android:id="@+id/deleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="deletePhoto"
+        android:text="Delete Photo"
+        app:layout_constraintBottom_toTopOf="@+id/UploadBtn"
+        app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="@+id/commentText"
+        app:layout_constraintTop_toBottomOf="@+id/commentText" />
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
@@ -72,7 +84,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints" >
+
+    </com.ismaeldivita.chipnavigation.ChipNavigationBar>
 
 
 
