--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,6 +45,30 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- Horizontal LinearLayout to make bmiTextView and bmiImageView adjacent -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/bmiTextView"
+                        android:layout_width="158dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical"
+                        android:text="BMI Value"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/bmiImageView"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/bmi"
+                        android:onClick="bmiClick"/> <!-- Make sure to replace with your actual drawable resource -->
+                </LinearLayout>
+
+                <!-- Other existing content remains the same -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -98,6 +122,7 @@
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <TextView
