--- a/app/src/main/res/layout/activity_medicine_info.xml
+++ b/app/src/main/res/layout/activity_medicine_info.xml
@@ -5,77 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MedicineInfoActivity"
-    android:background="@drawable/gradient_background">
+    android:background="@drawable/fragment_background">
 
 
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/titleTextView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="horizontal">
+        android:layout_height="61dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/title_color"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:text="Medicine Name" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="252dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/medicineRecyclerView"
+        android:layout_width="450dp"
+        android:layout_height="600dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:textColor="@color/title_color"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            tools:text="Medicine Name"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="150dp"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:id="@+id/doNotTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Do not use with" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="150dp"
-        android:layout_marginTop="300dp">
-
-        <TextView
-            android:id="@+id/sideEffectTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Side Effect" />
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="450dp">
-
-
-        <TextView
-            android:id="@+id/commentsTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Comments" />
-    </ScrollView>
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
@@ -83,7 +41,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="650dp"
+        android:layout_marginTop="720dp"
         android:background="@drawable/bottom_background"
         android:padding="4dp"
         app:cnb_backgroundColor="@color/blue"
