--- a/app/src/main/res/layout/activity_post_upload.xml
+++ b/app/src/main/res/layout/activity_post_upload.xml
@@ -21,38 +21,79 @@
 
     <EditText
         android:id="@+id/commentText"
-        android:layout_width="288dp"
-        android:layout_height="61dp"
+        android:layout_width="334dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Type Comment"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <EditText
+        android:id="@+id/medicineSearchTxt"
+        android:layout_width="285dp"
+        android:layout_height="42dp"
+        android:ems="10"
+        android:inputType="text"
+        android:layout_marginTop="8dp"
+        android:hint="Choose Medicine"
+        app:layout_constraintEnd_toEndOf="@+id/commentText"
+        app:layout_constraintStart_toStartOf="@+id/commentText"
+        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+
+    <TextView
+        android:id="@+id/pickedMedicineTxt"
+        android:layout_width="285dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toEndOf="@+id/commentText"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="@+id/commentText"
+        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="@+id/medicineSearchTxt"
+        app:layout_constraintHorizontal_bias="0.373"
+        app:layout_constraintStart_toStartOf="@+id/medicineSearchTxt"
+        app:layout_constraintTop_toBottomOf="@+id/medicineSearchTxt">
+
+        <LinearLayout
+            android:id="@+id/medicinesLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"></LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:id="@+id/UploadBtn"
         android:layout_width="118dp"
         android:layout_height="42dp"
-        android:layout_marginTop="96dp"
         android:onClick="upload"
         android:text="POST"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <Button
         android:id="@+id/cameraBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="60dp"
         android:onClick="takePhoto"
         android:text="Take Photo"
-        app:layout_constraintBottom_toTopOf="@+id/UploadBtn"
-        app:layout_constraintEnd_toEndOf="@+id/commentText"
-        app:layout_constraintTop_toBottomOf="@+id/commentText"
-        app:layout_constraintVertical_bias="0.479" />
+        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <Button
         android:id="@+id/deleteBtn"
@@ -60,11 +101,10 @@
         android:layout_height="wrap_content"
         android:onClick="deletePhoto"
         android:text="Delete Photo"
-        app:layout_constraintBottom_toTopOf="@+id/UploadBtn"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="@+id/commentText"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+        app:layout_constraintStart_toStartOf="@+id/scrollView2"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
@@ -72,7 +112,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bottom_background"
         android:padding="4dp"
         app:cnb_backgroundColor="@color/blue"
