--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,8 +56,9 @@
                         android:id="@+id/bmiTextView"
                         android:layout_width="158dp"
                         android:layout_height="40dp"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
                         android:text="BMI Value"
+                        android:textStyle="bold"
                         android:textSize="16sp" />
 
                     <ImageView
