--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/user"
+        android:onClick="forgotPasswordClicked"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,10 +82,12 @@
         android:text="FORGOT YOUR PASSWORD"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:onClick="forgotPasswordClicked"
         app:layout_constraintEnd_toEndOf="@+id/signInBtn"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="@+id/signInBtn"
         app:layout_constraintTop_toBottomOf="@+id/signInBtn" />
+
 
     <Button
         android:id="@+id/createAccount"
@@ -94,7 +97,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotBTN" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotBTN"
+        app:layout_constraintVertical_bias="0.626" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
