--- a/app/src/main/res/drawable/rounded_corners_background.xml
+++ b/app/src/main/res/drawable/rounded_corners_background.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/transparent"/>
-    <corners android:radius="30dp"/>
+    android:shape="oval">
+    <solid android:color="#BDF7EA"/> <!-- Change color as needed -->
+    <size
+        android:width="200dp"
+        android:height="200dp"/>
 </shape>
+
