--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
-    android:fillViewport="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/gradient_background">
 
+    <!-- Top LinearLayout -->
     <LinearLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
 
+            <!-- Profile image and Sign Out button section -->
             <LinearLayout
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
@@ -40,12 +43,13 @@
                     android:text="Sign Out" />
             </LinearLayout>
 
+            <!-- Additional user information section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- Horizontal LinearLayout to make bmiTextView and bmiImageView adjacent -->
+                <!-- Horizontal layout for BMI Value -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -66,10 +70,10 @@
                         android:layout_width="35dp"
                         android:layout_height="40dp"
                         android:src="@drawable/bmi"
-                        android:onClick="bmiClick"/> <!-- Make sure to replace with your actual drawable resource -->
+                        android:onClick="bmiClick"/>
                 </LinearLayout>
 
-                <!-- Other existing content remains the same -->
+                <!-- User's name and height -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -97,6 +101,7 @@
                         android:textSize="18sp" />
                 </LinearLayout>
 
+                <!-- User's age and weight -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,58 +128,30 @@
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="PAST MEDICINES"
-            android:textStyle="bold"/>
-
-        <!-- Placeholder for Past Medicines -->
-        <!-- ImageView or RecyclerView can be added here -->
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="FAVORITES"
-            android:textStyle="bold"/>
-
-        <LinearLayout
-            android:id="@+id/favoritesContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:scrollbars="horizontal">
-            <!-- Dynamically added favorite items will go here -->
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="ALLERGIES"
-            android:textStyle="bold"/>
-
-        <!-- Placeholder for Allergies -->
-        <!-- ImageView or RecyclerView can be added here -->
-
-        <com.ismaeldivita.chipnavigation.ChipNavigationBar
-            android:id="@+id/bottomMenu"
-            android:layout_width="match_parent"
-            android:layout_marginTop="390dp"
-            android:layout_height="70dp"
-            android:background="@drawable/bottom_background"
-            app:cnb_backgroundColor="@color/blue"
-            app:cnb_iconColor="@color/blue"
-            app:cnb_iconSize="20dp"
-            app:cnb_menuResource="@menu/bottom_menu"
-            app:cnb_radius="50dp"
-            app:cnb_unselectedColor="#ffffff" />
     </LinearLayout>
-</ScrollView>
+
+    <!-- RecyclerView for dynamic content -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/homeRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/topLayout"
+        android:layout_above="@id/bottomMenu"/>
+
+    <!-- Bottom Navigation Bar -->
+    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:id="@+id/bottomMenu"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bottom_background"
+        app:cnb_backgroundColor="@color/blue"
+        app:cnb_iconColor="@color/blue"
+        app:cnb_iconSize="20dp"
+        app:cnb_menuResource="@menu/bottom_menu"
+        app:cnb_radius="50dp"
+        app:cnb_unselectedColor="#ffffff" />
+</RelativeLayout>
+
 
