--- a/app/src/main/res/layout/activity_post_upload.xml
+++ b/app/src/main/res/layout/activity_post_upload.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.PostUploadActivity"
-    android:background="@drawable/gradient_background">
+    android:background="@drawable/fragment_background">
 
     <ImageView
         android:id="@+id/imageView"
@@ -108,13 +108,11 @@
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="410dp"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/bottom_background"
-        android:padding="4dp"
         app:cnb_backgroundColor="@color/blue"
         app:cnb_iconColor="@color/blue"
         app:cnb_iconSize="20dp"
@@ -122,13 +120,7 @@
         app:cnb_radius="50dp"
         app:cnb_unselectedColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" >
-
-    </com.ismaeldivita.chipnavigation.ChipNavigationBar>
-
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
