--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue">#0c7fc4</color>
     <color name="green">#00FFFF</color>
     <color name="title_color">#30AB8F</color>
+    <color name="green2">#50E24A</color>
 </resources>
