--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -2,8 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="50dp"/>
-        <gradient android:startColor="#3BFCA4" android:endColor="#00FA88" android:angle="90"/>
+        <gradient android:startColor="#C6D5D7" android:endColor="#C6D5D7" android:angle="90"/>
     </shape>
 </item>
 </selector>
