--- a/app/src/main/res/drawable/fragment_background.xml
+++ b/app/src/main/res/drawable/fragment_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:startColor="#BDF7EA" android:endColor="#ABF5E5" android:angle="270"/>
+            <gradient android:startColor="#FFFFFF" android:endColor="#E4EDF5" android:angle="270"/>
         </shape>
     </item>
 </selector>
