--- a/app/src/main/res/layout/activity_medicine_info.xml
+++ b/app/src/main/res/layout/activity_medicine_info.xml
@@ -21,8 +21,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicineRecyclerView"
-        android:layout_width="450dp"
-        android:layout_height="600dp"
+        android:layout_width="410dp"
+        android:layout_height="594dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="1dp"
@@ -37,13 +37,14 @@
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
-        android:layout_width="450dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="720dp"
+        android:layout_width="410dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="730dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-4dp"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/bottom_background"
-        android:padding="4dp"
         app:cnb_backgroundColor="@color/blue"
         app:cnb_iconColor="@color/blue"
         app:cnb_iconSize="20dp"
@@ -51,7 +52,6 @@
         app:cnb_radius="50dp"
         app:cnb_unselectedColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 
