--- a/app/src/main/res/layout/activity_pharmacies.xml
+++ b/app/src/main/res/layout/activity_pharmacies.xml
@@ -22,7 +22,7 @@
         android:layout_below="@+id/map"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Fetch Pharmacies" />
+        android:text="Find Pharmacies" />
 
 
     <androidx.recyclerview.widget.RecyclerView
