--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,33 +5,33 @@
         android:icon="@drawable/home2"
         android:title="Home"
         app:cnb_iconColor="@color/white"
-        app:cnb_backgroundColor="@color/blue"
+        app:cnb_backgroundColor="@color/green2"
         />
 
     <item android:id="@+id/bottom_search"
         android:icon="@drawable/search0"
         android:title="Search"
         app:cnb_iconColor="@color/white"
-        app:cnb_backgroundColor="@color/blue"
+        app:cnb_backgroundColor="@color/green2"
         />
     <item android:id="@+id/bottom_Pharmacies"
         android:title="Pharmacies"
         android:visible="true"
         android:icon="@drawable/pharmacies"
         app:cnb_iconColor="@color/white"
-        app:cnb_backgroundColor="@color/blue"
+        app:cnb_backgroundColor="@color/green2"
         />
 
     <item android:id="@+id/bottom_upload"
         android:icon="@drawable/upload2"
         android:title="Upload"
         app:cnb_iconColor="@color/white"
-        app:cnb_backgroundColor="@color/blue"
+        app:cnb_backgroundColor="@color/green2"
         />
     <item android:id="@+id/bottom_profile"
         android:icon="@drawable/user"
         android:title="Profile"
         app:cnb_iconColor="@color/white"
-        app:cnb_backgroundColor="@color/blue"
+        app:cnb_backgroundColor="@color/green2"
         />
 </menu>
