--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#00FFFF</color>
     <color name="title_color">#30AB8F</color>
     <color name="green2">#50E24A</color>
+    <color name="button_color">#7DEB9B</color>
 </resources>
