--- a/app/src/main/res/layout/activity_account_create.xml
+++ b/app/src/main/res/layout/activity_account_create.xml
@@ -148,17 +148,48 @@
         app:layout_constraintStart_toEndOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
+    <!-- Switch for accepting the privacy policy -->
+
+    <TextView
+        android:id="@+id/privacyPolicyText"
+        android:layout_width="287dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="8dp"
+        android:text="I agree to the Privacy Policy."
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/privacySwitch"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <Switch
+        android:id="@+id/privacySwitch"
+        android:layout_width="48dp"
+        android:layout_height="22dp"
+        android:layout_marginEnd="40dp"
+        android:textOff="Disagree"
+        android:textOn="Agree"
+        android:thumbTint="@color/green2"
+        android:trackTint="@color/blue"
+        app:layout_constraintBottom_toBottomOf="@+id/privacyPolicyText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/privacyPolicyText"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Button
         android:id="@+id/createAccountButton"
-        android:layout_width="328dp"
-        android:layout_height="45dp"
+        android:layout_width="346dp"
+        android:layout_height="58dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="20dp"
         android:onClick="signUpClicked"
+        android:background="@drawable/rounded_button"
         android:text="Create Account"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.255"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
