--- a/app/src/main/res/layout/activity_post_upload.xml
+++ b/app/src/main/res/layout/activity_post_upload.xml
@@ -82,7 +82,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/cameraBtn"
@@ -93,7 +94,8 @@
         android:text="Take Photo"
         app:layout_constraintEnd_toEndOf="@+id/scrollView2"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/deleteBtn"
@@ -104,12 +106,13 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
         app:layout_constraintStart_toStartOf="@+id/scrollView2"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:background="@drawable/rounded_button"/>
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/bottomMenu"
-        android:layout_width="410dp"
-        android:layout_height="65dp"
+        android:layout_width="413dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/bottom_background"
