--- a/app/src/main/res/layout/medicine_row.xml
+++ b/app/src/main/res/layout/medicine_row.xml
@@ -20,8 +20,9 @@
 
         <TextView
             android:id="@+id/recyclerEmailText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="username"
             android:textSize="16sp"
             android:layout_marginStart="10dp"
@@ -29,12 +30,11 @@
 
         <ImageView
             android:id="@+id/dots"
-            android:layout_width="31dp"
+            android:layout_width="52dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="100dp"
-            android:src="@drawable/dots" />
-
+            android:src="@drawable/dots2" />
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/recyclerCommentText"
@@ -93,9 +93,9 @@
 
         <ImageView
             android:id="@+id/shareImageView"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="120dp"
+            android:layout_width="44dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="90dp"
             android:layout_toEndOf="@id/commentImageView"
             android:onClick="sharePost"
             android:scaleType="fitCenter"
