--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -32,7 +32,7 @@
             android:id="@+id/dots"
             android:layout_width="52dp"
             android:layout_height="match_parent"
-            android:src="@drawable/dots2" />
+            android:src="@drawable/dots" />
     </LinearLayout>
 
 
