--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme1" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.GreenButtons" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorButtonNormal">@color/button_color</item>
     </style>
 </resources>
